sdo/eclipselink.sdo.test/resource/org/eclipse/persistence/testing/sdo/helper/classgen/invalidtypename/org/example/Item.java
package org.example;

public interface Item extends java.io.Serializable {

   public java.lang.String getItemID();

   public void setItemID(java.lang.String value);

   public java.lang.String getName();

   public void setName(java.lang.String value);


}

